packages/svelte/tests/validator/samples/rune-invalid-spread-derived/input.svelte
<script>
	const args = [0];
	const count = $derived(...args);
</script>