packages/svelte/tests/compiler-errors/samples/runes-wrong-derived-args/main.svelte
<script>
	const foo = $derived();
</script>
